--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,15 @@
   <meta name="google" content="notranslate">
   <meta name="viewport" content="width=device-width">
   <meta name="keywords" content="Design, Gestaltung, Produktdesign, Designprodukt, Wohnen, Dekoration, Geschenk, Wanddekoration, Stillleben, Inneneinrichtung, DIY, Vase, Lasercut">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,300i" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="apple-touch-icon" href="//touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="//touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="//touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="//touch-icon-ipad-retina.png">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
   <link rel="stylesheet" href="bower_components/angular-backtop/dist/angular-backtop.css" />
   <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
   <!-- endbower -->
@@ -78,9 +83,9 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-backtop/dist/angular-backtop.js"></script>
+<script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -96,6 +101,7 @@
 <script src="scripts/controllers/contact.state.js"></script>
 <script src="scripts/controllers/navbar.controller.js"></script>
 <script src="scripts/controllers/flortrait.controller.js"></script>
+<script src="scripts/controllers/contact.controller.js"></script>
 <!-- endbuild -->
 </body>
 </html>
