--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,11 @@
   <meta name="keywords" content="Design, Gestaltung, Produktdesign, Designprodukt, Wohnen, Dekoration, Geschenk, Wanddekoration, Stillleben, Inneneinrichtung, DIY, Vase, Lasercut">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="apple-touch-icon" href="//touch-icon-iphone.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="//touch-icon-ipad.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="//touch-icon-iphone-retina.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="//touch-icon-ipad-retina.png">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="apple-touch-icon-ipad-retina.png">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
