--- a/app/50x.html
+++ b/app/50x.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found :(</title>
+  <title>Error :/</title>
   <style>
     ::-moz-selection {
       background: #b3d4fc;
@@ -75,13 +75,8 @@
 </head>
 <body>
 <div class="container">
-  <h1>Not found <span>:(</span></h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
-  <p>It looks like this was the result of either:</p>
-  <ul>
-    <li>a mistyped address</li>
-    <li>an out-of-date link</li>
-  </ul>
+  <h1>Ups <span>:/</span></h1>
+  <p>Sorry, but this is our mistake as this error should not happen.</p>
 </div>
 </body>
 </html>
