--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Junges Produktdesign by Anja Wippler">
   <meta name="google" content="notranslate">
   <meta name="viewport" content="width=device-width">
-  <meta name="keywords" content="Design, Gestaltung, Produktdesign, Designprodukt, Wohnen, Dekoration, Geschenk, Wanddekoration, Stillleben, Inneneinrichtung, DIY, Vase, Lasercut">
+  <meta name="keywords"
+        content="Design, Gestaltung, Produktdesign, Designprodukt, Wohnen, Dekoration, Geschenk, Wanddekoration, Stillleben, Inneneinrichtung, DIY, Vase, Lasercut">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,300i" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -56,20 +57,6 @@
     </div>
   </div>
 </div>
-
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<script>
-  !function (A, n, g, u, l, a, r) {
-    A.GoogleAnalyticsObject = l, A[l] = A[l] || function () {
-        (A[l].q = A[l].q || []).push(arguments)
-      }, A[l].l = +new Date, a = n.createElement(g),
-      r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
-  }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-  ga('create', 'UA-77345407-1');
-  ga('send', 'pageview');
-</script>
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
