--- a/app/404.html
+++ b/app/404.html
@@ -72,6 +72,10 @@
       border: 0;
     }
   </style>
+  <script>
+    sessionStorage.redirect = location.href;
+  </script>
+  <meta http-equiv="refresh" content="0;URL='http://playfulsolutions.de'"/>
 </head>
 <body>
 <div class="container">
