--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,16 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
   <base href="/">
+  <script>
+    // See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/
+    (function(){
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect !== location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
 </head>
 <body ng-app="pfswebApp">
 <!--[if lte IE 9]>
