added required "Datenschutzerklärung"

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col-md-offset-2 col-md-3 col-sm-offset-2 col-sm-3 col-xs-offset-0 col-xs-3">
         <div class="pull-right">
-          <span><a ui-sref="impressum"><small>Impressum</small></a></span>
+          <span><a ui-sref="impressum"><small>Impressum</small></a></span><span>&nbsp;|&nbsp;<a ui-sref="datenschutz"><small>Datenschutzerkl&auml;rung</small></a></span>
         </div>
       </div>
     </div>
@@ -96,6 +96,7 @@
 <script src="scripts/controllers/impressum.state.js"></script>
 <script src="scripts/controllers/flortrait.state.js"></script>
 <script src="scripts/controllers/contact.state.js"></script>
+<script src="scripts/controllers/datenschutz.state.js"></script>
 <script src="scripts/controllers/navbar.controller.js"></script>
 <script src="scripts/controllers/flortrait.controller.js"></script>
 <script src="scripts/controllers/contact.controller.js"></script>
